feat: Implemented rect-rect collisions (#2)
* feat: Made branch executable again

* feat: Added new assets to build

* docs: Updated readme

* feat: Added basic collision logic

* fix: Fixed steering direction when driving backwards

--- a/Velocity.csproj
+++ b/Velocity.csproj
@@ -8,6 +8,47 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="recources\Car_01.png" />
+    <None Remove="recources\Car_02.png" />
+    <None Remove="shaders\car_shader.frag" />
+    <None Remove="shaders\car_shader.vert" />
+    <None Remove="shaders\shader.frag" />
+    <None Remove="shaders\shader.vert" />
+    <None Remove="textures\awesomeface.png" />
+    <None Remove="textures\container.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="shaders\car_shader.vert">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="recources\Car_01.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="recources\Car_02.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="shaders\car_shader.frag">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="shaders\shader.frag">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="shaders\shader.vert">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="textures\awesomeface.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="textures\container.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="OpenTK" Version="4.9.4" />
     <PackageReference Include="StbImageSharp" Version="2.30.15" />
   </ItemGroup>
