basic setup works now, can draw car and container as background ToDo: figure out how to load a map, and find the alpha values, nad match thme to the postion of the car in the world. to then do collision and other stuff

--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -25,10 +25,10 @@
     <Content Include="recources/textures\Car_02.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="shaders\shader.frag">
+    <Content Include="shaders\default.frag">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="shaders\shader.vert">
+    <Content Include="shaders\default.vert">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="recources/textures\awesomeface.png">
