--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -7,36 +7,12 @@
     <Nullable>enable</Nullable>
     </PropertyGroup>
 
+  
   <ItemGroup>
-    <None Remove="recources\Car_01.png" />
-    <None Remove="recources\Car_02.png" />
-    <None Remove="shaders\car_shader.frag" />
-    <None Remove="shaders\car_shader.vert" />
-    <None Remove="shaders\shader.frag" />
-    <None Remove="shaders\shader.vert" />
-    <None Remove="textures\awesomeface.png" />
-    <None Remove="textures\container.jpg" />
-  </ItemGroup>
+  <Content Include="recources/**/*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
 
-  <ItemGroup>
-  <Content Include="recources/textures\Car_01.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="recources/textures\Car_02.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="shaders\default.frag">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="shaders\default.vert">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="recources/textures\awesomeface.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="recources/textures\container.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
 
   <ItemGroup>
