--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+## Igrnore game save files
+laptime*
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
